# RP2040-HAT-LWIP-C

./: CMakeLists.txt
examples/dhcp_dns/: CMakeLists.txt  flash_utils.c  flash_utils.h  memmap_custom.ld  w5x00_dhcp_dns.c
examples/dhcp_dns/sql_client/: hexdump.c  hexdump.h  illumination.c  illumination.h  intercom.c  intercom.h  md5.c  md5.h  mdb.c  mdb.h  postgresql.c  postgresql.h  rtc.c  rtc.h  uart_rx9.pio  uart_tx9.pio
port/ioLibrary_Driver/inc/: w5x00_spi.h
port/ioLibrary_Driver/src/: w5x00_spi.c
port/lwip/: lwipopts.h  w5x00_lwip.c
port/timer/: timer.c
